# uqgrd

./: .gitignore  Cargo.toml  Dockerfile  README.md  cleanup.sh  deploy.sh  install.sh
src/: cli.rs  constants.rs  main.rs
src/modules/: api.rs  auth.rs  daemon.rs  interact.rs  mod.rs
