[package]
name = "uqgrd"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
directories = "6.0.0"
inquire = "0.9.2"
keyring = "3.6.3"
lettre = "0.11.19"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
